--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ nltk==3.2.4
 #install manually tensorflow with pip3 install --upgrade https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.8.0-py3-none-any.whl
 tensorboardX==1.6
 mypy==0.650
+jupyter
