--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-torch==1.0.0 #not working because Amazon GPU NVIDIA driver too old (8000)
+torch==1.0.1 #not working because Amazon GPU NVIDIA driver too old (8000)
 torchvision==0.2.0
 nltk==3.2.4
 # tensorflow==1.4 #does not work!
@@ -6,3 +6,4 @@ nltk==3.2.4
 tensorboardX==1.6
 mypy==0.650
 jupyter
+sklearn
